# PA1-bail0416-yang8919

./: .gitignore  CMakeLists.txt  ComputeNode_server.cpp  Coordinator_server.cpp  README.md  client.cpp  compute_nodes.txt  dir.txt  distributedML.thrift  report.docx  ~$report.docx
ML/: ML.cpp  ML.hpp  compute_nodes.txt
ML/ML/: ML.cpp
client/: CMakeLists.txt  client.cpp
gen-cpp/: ComputeNode.cpp  ComputeNode.h  ComputeNode_server.skeleton.cpp  Coordinator.cpp  Coordinator.h  Coordinator_server.skeleton.cpp  distributedML_types.cpp  distributedML_types.h
